# fresh-start-python

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  pyproject.toml  pyproject_settings.toml  pyrightconfig.json  requirements.txt
.zed/: settings.json
freshstartpy/: __main__.py  app.py
